# yolov5_cpp_detect

./: CMakeLists.txt  README.md  include  main.cpp  main.h  src
lib/: CMakeLists.txt
lib/include/: detector.h  utils.h
lib/src/: CMakeLists.txt  detector.cpp  utils.cpp
